Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,12 @@
 trigger:
 - main
 
-pool:
-  vmImage: 'ubuntu-latest'
+
+pool: eShopOnWebSelfPool
+  
 
 variables:
+  vmImage: 'ubuntu-latest'
   imageName: 'pipelines-javascript-docker1'
   
 steps:
